Archive2/5b/dd24050841b0c1/output
main.cpp:1:10: error: use of undeclared identifier 'size_t'; did you mean 'sizeof'?
void foo(size_t) {}
         ^~~~~~
         sizeof
main.cpp:1:6: error: variable has incomplete type 'void'
void foo(size_t) {}
     ^
main.cpp:1:16: error: expected expression
void foo(size_t) {}
               ^
main.cpp:1:17: error: expected ';' after top level declarator
void foo(size_t) {}
                ^
                ;
4 errors generated.
gcc:
main.cpp:1:16: error: variable or field 'foo' declared void
 void foo(size_t) {}
                ^
main.cpp:1:10: error: 'size_t' was not declared in this scope
 void foo(size_t) {}
          ^
